Convert event start time to user's local timezone

Since we don't display the timezone of the event in the notification,
this is required when the event is in a different timezone from the
user's local one.

BUG: 453805


(cherry picked from commit 750200aa58e3a8c4073e6304a0e214c1c5beafb9)